@@ -95,6 +95,10 @@
         <accel>CTRL+A</accel>
         <help>Save data in a differ ThotKeeper XML file.</help>
       </object>
+      <object class="wxMenuItem" name="TKMenuFileArchive">
+        <label>Archive...</label>
+        <help>Archive old entries.</help>
+      </object>
       <object class="wxMenuItem" name="TKMenuFileRevert">
         <label>&amp;Revert</label>
         <help>Save data.</help>
@@ -187,7 +191,7 @@
                         <object class="unknown" name="TKCalendar"/>
                         <flag>wxALL</flag>
                         <border>5</border>
-                        <minsize>220,150</minsize>
+                        <minsize>220,165</minsize>
                       </object>
                       <object class="sizeritem">
                         <object class="wxButton" name="TKToday">
@@ -488,21 +492,21 @@
       </object>
     </object>
   </object>
-  <object class="wxDialog" name="TKChangeDate">
-    <title>Change Entry Date</title>
+  <object class="wxDialog" name="TKChooseDate">
+    <title>Choose Date</title>
     <object class="wxFlexGridSizer">
       <cols>1</cols>
       <object class="sizeritem">
-        <object class="wxPanel" name="TKChangeDatePanel">
+        <object class="wxPanel" name="TKChooseDatePanel">
           <object class="wxFlexGridSizer">
             <object class="sizeritem">
-              <object class="unknown" name="TKChangeDateCalendar"/>
+              <object class="unknown" name="TKChooseDateCalendar"/>
               <flag>wxALL</flag>
               <border>5</border>
-              <minsize>220,150</minsize>
+              <minsize>220,165</minsize>
             </object>
             <object class="sizeritem">
-              <object class="wxButton" name="TKChangeDateToday">
+              <object class="wxButton" name="TKChooseDateToday">
                 <label>Today</label>
               </object>
               <flag>wxALL|wxEXPAND|wxALIGN_CENTRE</flag>
