@@ -1,3 +1,8 @@
+Version ??? (released ????-??-??)
+
+ * UI enhancements
+ * feature: entry archive support (issue #43)
+
 Version 0.4 (released 2009-06-18)
 
  * feature: support tag renaming (issue #17)
